# movie-recommender

./: .gitignore  README.md  pyproject.toml
notebooks/: Heuristic_Faiss_solution.ipynb  Reranking_boosting_modeling.ipynb  bipartite_graph_link_pred.ipynb  sasrec.ipynb
src/recsys/boosting/: candidates.py  feature_engineering.py  negative_sampling.py
