[tool.poetry]
name = "movie-recommender"
version = "0.1.0"
description = ""
authors = ["M1croZavr <tlashukov@gmail.com>"]
readme = "README.md"
packages = [
    { include = "recsys", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
notebook = "^7.2.2"
numpy = "<2.0.0"
pandas = "^2.2.3"
implicit = "^0.7.2"
scipy = "^1.14.1"
catboost = "^1.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
