[tool.poetry]
name = "movie-recommender"
version = "0.1.0"
description = ""
authors = ["M1croZavr <tlashukov@gmail.com>"]
readme = "README.md"
packages = [
    { include = "recsys", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
notebook = "^7.2.2"
numpy = "<2.0.0"
pandas = ">=1.3.5,<=2.2.2"
implicit = "^0.7.2"
scipy = "^1.14.1"
catboost = "^1.2.7"
scikit-learn = "^1.5.2"
faiss-cpu = "^1.9.0"
lightning = "^2.4.0"
replay-rec = "^0.18.0"
torch-geometric = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
